--- a/UI/src/app/pages/home/home.component.scss
+++ b/UI/src/app/pages/home/home.component.scss
@@ -11,9 +11,9 @@ main{
 }
 .scaled_image {
   display: block;
-  max-width: 100%;
-  width: 100%;
-  height: 100%;
+  //max-width: 100%;
+  //width: 100%;
+  //height: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -157,9 +157,9 @@ span.carousel-desc {
   transition: 0.3s;
 }
 
-.img-screen:hover {
-  opacity: 0.7;
-}
+//.img-screen:hover {
+//  opacity: 0.7;
+//}
 
 .container-marketing {
   max-width: 80rem;
