--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -33,13 +33,28 @@
             }}
           </div>
           <div *ngFor="let comparisonplot of plots; let ind = index" class='p-col'>
-<!--            <img width="95%"-->
-<!--                 height="95%"-->
-<!--                 [src]=sanitizePlotUrl(comparisonplot.plot)-->
-<!--                 (click)="showGallery(ind, plots)"-->
-<!--                 [ngClass]="{'result-plot': true, 'pcol6': true, 'small-size': plots.length == 1}"-->
-<!--                 alt="An Overview map for {{selectedMetric.metric_pretty_name}}">-->
-              <!--  Download buttons for each plot -->
+            <p-galleria [value]="plots"
+                        [(visible)]="displayGallery"
+                        [(activeIndex)]="activeIndex"
+                        [circular]="true"
+                        [fullScreen]="true"
+                        [showItemNavigators]="plots.length > 1"
+                        [showThumbnails]="false"
+                        [baseZIndex]="100000">
+              <ng-template pTemplate="item" let-item>
+                <img [src]="sanitizePlotUrl(item.plot)"
+                     alt="An Overview map for {{selectedMetric.metric_pretty_name}}"
+                     style="width: 100%;
+                             display: block;"/>
+              </ng-template>
+            </p-galleria>
+            <img width="95%"
+                 height="95%"
+                 [src]=sanitizePlotUrl(comparisonplot.plot)
+                 (click)="showGallery(ind)"
+                 [ngClass]="{'result-plot': true, 'pcol6': true, 'small-size': plots.length == 1}"
+                 alt="An Overview map for {{selectedMetric.metric_pretty_name}}">
+                Download buttons for each plot
               <div class="p-py-3 p-pl-2" style="text-align: left">
                 <a class="btn-action-large"
                    pButton
