scroll to top module replaced with a primeng ones

--- a/UI/src/app/modules/core/tools/scroll-to-top/scroll-to-top.component.scss
+++ b/UI/src/app/modules/core/tools/scroll-to-top/scroll-to-top.component.scss
@@ -9,10 +9,10 @@
   opacity: 1;
   transition: all .2s ease-in-out;
 }
-.scroll-button {
-  border-radius: 50%;
-  width: 2.5rem;
-  height: 2.5rem;
-  border: none;
-  outline: none;
-}
+//.scroll-button {
+//  border-radius: 50%;
+//  width: 2.5rem;
+//  height: 2.5rem;
+//  border: none;
+//  outline: none;
+//}
