--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -64,5 +64,5 @@
                       href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}"
                       target="_blank" rel="noreferrer">version {{this.getAppVersion()}}</a>.
   </p>
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 </main>
