--- a/UI/src/app/pages/dataset-info/dataset-info.component.html
+++ b/UI/src/app/pages/dataset-info/dataset-info.component.html
@@ -54,5 +54,5 @@
     </table>
     <span><sup>*</sup> dataset temporarily excluded from the reference list for technical reasons<br> </span>
     <br>
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 </main>
