--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -126,6 +126,6 @@
     </li>
   </ol>
 
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 
 </main>
