--- a/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.html
+++ b/UI/src/app/pages/user-data-guidelines/user-data-guidelines.component.html
@@ -400,6 +400,6 @@
   Example files that fulfill the above described requirements to various degrees can be downloaded from
   <a target="_blank" href="https://github.com/awst-austria/qa4sm-testdata/tree/master/user_data">this GitHub package</a>.
 
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 </main>
 
