--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -500,4 +500,13 @@ img {
   max-width: 80rem;
 }
 
+.scroll-button {
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  border: none;
+  outline: none;
+  opacity: 70%;
+}
+
 
