--- a/UI/src/app/pages/login-page/login-page.component.html
+++ b/UI/src/app/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
 <main class="container-fluid">
   <app-login [navigateAfter]="true"></app-login>
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 </main>
