--- a/UI/src/app/pages/password-reset/password-reset.component.html
+++ b/UI/src/app/pages/password-reset/password-reset.component.html
@@ -34,5 +34,5 @@
       </div>
     </div>
   </div>
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 </main>
