--- a/UI/src/app/pages/published-validations/published-validations.component.html
+++ b/UI/src/app/pages/published-validations/published-validations.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <qa-validation-page-paginated [published]="true"></qa-validation-page-paginated>
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 </div>
 
