--- a/UI/src/app/pages/set-password/set-password.component.html
+++ b/UI/src/app/pages/set-password/set-password.component.html
@@ -47,6 +47,6 @@
       </div>
     </div>
   </div>
-  <qa-scroll-to-top></qa-scroll-to-top>
+  <p-scrollTop styleClass="scroll-button"></p-scrollTop>
 </main>
 
