--- a/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
+++ b/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
@@ -1,4 +1,4 @@
-@import "~src/style.variables";
+@import "src/style.variables";
 .navbar {
   background-color: $base-color;
   margin-bottom: 1rem;
