--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -1,5 +1,5 @@
 <div class="p-grid no-gutters" [ngClass]="{'non-scrollable': isExistingValidationWindowOpen}">
-  <div *ngIf="!(authService.authenticated|async)"
+  <div *ngIf="(authService.authenticated|async)===false"
        class="p-col-12 alert center">
     <h5 class="p-pt-2">
       You are not logged in.
@@ -31,11 +31,11 @@
           </ng-template>
           <p-accordion multiple="true">
 
-            <p-accordionTab *ngFor="let item of validationModel.datasetConfigurations; let datasetIdx = index"
+            <p-accordionTab *ngFor="let item of validationModel.datasetConfigurations; index as datasetIdx"
                             [header]="(item.datasetModel.selectedDataset?.pretty_name)+' / ' +
                              ''+(item.datasetModel.selectedVersion?.pretty_name)+' / '+(item.datasetModel.selectedVariable?.short_name)
                              + (validationConfigService.getInformationOnTheReference((item.spatialReference$|async), (item.temporalReference$|async), (item.scalingReference$|async)))"
-                            [selected]="datasetIdx == validationModel.datasetConfigurations.length - 1"
+                            [selected]="datasetIdx === validationModel.datasetConfigurations.length - 1"
                             [class]="{'highlighted': (item.highlighted$|async),
                             'is-reference': ((item.spatialReference$|async) || (item.temporalReference$|async) || (item.scalingReference$|async))}">
 
