--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -21,7 +21,7 @@
 
       <!--  data column-->
       <div class="p-md-5 p-col-10">
-        <p-panel header="Data" [toggleable]="true" class="validation-small-row">
+        <p-panel header="Data" [toggleable]="false" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
                    pTooltip="The soil moisture dataset which is to be validated, i.e. compared to the 'Reference' data."
