--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6320,6 +6320,28 @@ a.btn-action.p-button:hover, a.btn-action-large.p-button:hover{
   font-size: 1.2rem;
 }
 
+.ol-control button{
+  display: block;
+  margin: 1px;
+  padding: 0;
+  color: #fff;
+  font-size: 1.14em;
+  font-weight: 700;
+  text-decoration: none;
+  text-align: center;
+  height: 1.375em;
+  width: 1.375em;
+  line-height: .4em;
+  background-color: rgba(0,60,136,.5);
+  border: none;
+  border-radius: 2px;
+}
+
+.ol-control button:hover{
+  color: white;
+  background-color: rgba(0,60,136, 0.8);
+}
+
 @media screen and (min-width: 564px) and (max-width: 714.9px){
   .btn-action.p-button {
     width: 1.75rem;
