comment added so I know what to update when the bug is fixed

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -21,6 +21,7 @@
 
       <!--  data column-->
       <div class="p-md-5 p-col-10">
+<!--        here toggleable is set to false, otherwise accordions won't close, that's a bug in primeng 15.4.1-->
         <p-panel header="Data" [toggleable]="false" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
