class updates according to the new naming convention in the primeflex library done

--- a/UI/src/app/modules/anomalies/components/anom-climatology/anom-climatology.component.html
+++ b/UI/src/app/modules/anomalies/components/anom-climatology/anom-climatology.component.html
@@ -1,12 +1,12 @@
-<div class="p-grid">
-  <div class="p-col-12 p-sm-6 p-pb-0">
-    <div class="p-grid" id="fromAnomField">
-      <div class="small-label p-col-4">
+<div class="grid">
+  <div class="col-12 sm:col-6 pb-0">
+    <div class="grid" id="fromAnomField">
+      <div class="small-label col-4">
         <div class="p-fluid">
           <div>From</div>
         </div>
       </div>
-      <div class="p-col-7 p-px-0 p-mx-0">
+      <div class="col-7 px-0 mx-0">
         <div class="p-fluid">
           <div class="p-float-label">
             <div class="p-float-label">
@@ -30,14 +30,14 @@
     </div>
   </div>
 
-  <div class="p-col-12 p-sm-6 p-pb-0">
-    <div class="p-grid" id="toAnomField">
-      <div class="small-label p-col-4">
+  <div class="col-12 sm:col-6 pb-0">
+    <div class="grid" id="toAnomField">
+      <div class="small-label col-4">
         <div class="p-fluid">
           <div>To</div>
         </div>
       </div>
-      <div class="p-col-7 p-px-0 p-mx-0">
+      <div class="col-7 px-0 mx-0">
         <div class="p-fluid">
           <div class="p-float-label">
             <p-inputNumber
